# editable-ws-dep-bug-simplified

./: README.md  pyproject.toml
